objects/vtse__Assessment_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vtse__Include_In_Score__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include In Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vtse__No_Value__c</fullName>
        <label>No Value</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vtse__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Star</fullName>
                    <label>Star Rating</label>
                </value>
                <value>
                    <fullName>Free Text</fullName>
                </value>
                <value>
                    <fullName>Yes No</fullName>
                    <label>Yes/No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Yes_Value__c</fullName>
        <label>Yes Value</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <label>Assessment Criteria</label>
    <nameField>
        <label>Criteria Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Criteria</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>